--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         </div>
                         <p>A rogue-like adventure into the unknown. Light your path, fight the shadows, and uncover the
                             secrets of the lanterns.</p>
-                        <a href="#" class="btn btn-outline">Coming Soon</a>
+                        <a href="#" id="play-btn" class="btn btn-outline" role="button">Play Now</a>
                     </div>
                     <div class="game-visual fade-in">
                         <img src="dark_lanterns_art.png" alt="Dark Lanterns Key Art" class="game-art">
