--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
                 <div class="hero-cta fade-in dl-delay-2">
                     <a href="#games" class="btn btn-primary">Our Games</a>
                 </div>
+                <p class="fade-in dl-delay-1">Join our playtesting team and enjoy early access</p>
+                <div class="hero-cta fade-in dl-delay-2">
+                    <a href="#games" class="btn btn-primary">Download the launcher</a>
+                </div>
             </div>
             <div class="hero-bg-overlay"></div>
         </section>
