Add empty paragraph for spacing in hero section
Added an empty paragraph for spacing in the hero section.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                 <div class="hero-cta fade-in dl-delay-2">
                     <a href="#games" class="btn btn-primary">Our Games</a>
                 </div>
-                <p class="fade-in dl-delay-1">Join our playtesting team and enjoy early access</p>
+                <p class="fade-in dl-delay-1">Join our playtesting team and enjoy early access</p>\
+                <p></p>
                 <div class="hero-cta fade-in dl-delay-2">
                     <a href="#games" class="btn btn-primary">Download the launcher</a>
                 </div>
