Update playtest section with download links

--- a/index.html
+++ b/index.html
@@ -49,15 +49,22 @@
                 <div class="hero-cta fade-in dl-delay-2">
                     <a href="#games" class="btn btn-primary">Our Games</a>
                 </div>
-                <p class="fade-in dl-delay-1">Join our playtesting team and enjoy early access</p>\
-                <p></p>
+            </div>
+            <div class="hero-bg-overlay"></div>
+        </section>
+        <section id="playtest" class="hero">
+            <div class="container hero-content">
+                <h1 class="fade-in">Playtest with us</h1>
+                <p class="fade-in dl-delay-1">Download our launcher to gain early access to our game</p>
                 <div class="hero-cta fade-in dl-delay-2">
-                    <a href="#games" class="btn btn-primary">Download the launcher</a>
+                    <a href="#games" class="btn btn-primary">Download for windows</a>
+                </div>
+                <div class="hero-cta fade-in dl-delay-2">
+                    <a href="#games" class="btn btn-primary">Download for macos</a>
                 </div>
             </div>
             <div class="hero-bg-overlay"></div>
         </section>
-
         <section id="games" class="section-padding">
             <div class="container">
                 <div class="section-header fade-in">
