Update download button and remove macOS link

--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                 <h1 class="fade-in">Playtest with us</h1>
                 <p class="fade-in dl-delay-1">Download our launcher to gain early access to our game</p>
                 <div class="hero-cta fade-in dl-delay-2">
-                    <a href="#games" class="btn btn-primary">Download for windows</a>
-                </div>
-                <div class="hero-cta fade-in dl-delay-2">
-                    <a href="#games" class="btn btn-primary">Download for macos</a>
+                    <a href="#games" class="download-launcher-btn">Download</a>
                 </div>
             </div>
             <div class="hero-bg-overlay"></div>
