--- a/index.html
+++ b/index.html
@@ -52,15 +52,15 @@
             </div>
             <div class="hero-bg-overlay"></div>
         </section>
-        <section id="playtest" class="hero">
-            <div class="container hero-content">
-                <h1 class="fade-in">Playtest with us</h1>
+        <section id="playtest" class="section-padding">
+            <div class="container">
+                <h1 class="section-header fade-in">Playtest with us</h1>
                 <p class="fade-in dl-delay-1">Download our launcher to gain early access to our game</p>
                 <div class="hero-cta fade-in dl-delay-2">
                     <a href="#games" class="download-launcher-btn">Download</a>
                 </div>
             </div>
-            <div class="hero-bg-overlay"></div>
+            <div class="con"></div>
         </section>
         <section id="games" class="section-padding">
             <div class="container">
