Add meta tags for SEO and social sharing

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Orange Pear Studios | Indie Game Development</title>
     <meta name="description"
         content="Orange Pear Studios - Creators of Dark Lanterns. A new indie game development team crafting immersive rogue-like experiences.">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Orange Pear Studios">
+    <meta property="og:description" content="Creators of Dark Lanterns. Indie rogue-like development.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://orange-pear-studios.github.io">
+    <link rel="canonical" href="https://orange-pear-studios.github.io">
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
