--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
                 <div class="playtest-promo fade-in dl-delay-2">
                     <p>Join our playtesting team and enjoy early access</p>
                     <div class="hero-cta">
-                        <a href="launcher.zip" class="btn btn-primary" download>Download the launcher</a>
+                        <a href="downloads/launcher-win.zip" class="btn btn-primary" download>Download for Windows</a>
+                        <a href="downloads/launcher-mac.zip" class="btn btn-secondary" download>Download for Mac</a>
                     </div>
                 </div>
             </div>
